[package]
authors = ["Carsten König <carstenkoenig92@gmail.com>"]
edition = "2018"
name = "simprox"
version = "0.4.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["cargo", "env", "derive"] }
ctrlc = "3.2"
culpa = "1"
hyper = "1"
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
url = "2"
warp = "0.3"

[profile.release]
lto = true
